# advent-of-code

./: day_template.py  pyproject.toml
src/advent_of_code/: __init__.py  cli.py  cycle_detection.py  geo2d.py  geo3d.py  log.py  logs.py  math.py  problems.py  search.py  utils.py
src/advent_of_code/utils/: __init__.py  cli.py  conversion.py  cycle_detection.py  data.py  geo2d.py  geo3d.py  math.py  search.py  strings.py
src/advent_of_code/year2019/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day16.py  day17.py  day19.py  intcode.py
src/advent_of_code/year2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
src/advent_of_code/year2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
src/advent_of_code/year2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
src/advent_of_code/year2024/: day01.py
src/advent_of_code/year2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
src/aoc/: __init__.py  geo2d.py  problems.py  search.py  utils.py
src/aoc/year2019/: day03.py  day06.py  day07.py  day10.py  day11.py  day12.py  day13.py  day14.py  day17.py  intcode.py
src/aoc/year2021/: day08.py  day10.py  day11.py  day13.py  day15.py  day17.py  day18.py  day19.py  day20.py  day22.py  day23.py  day24.py  day25.py
src/aoc/year2022/: day03.py  day07.py  day08.py  day09.py  day10.py  day12.py  day14.py  day15.py  day17.py  day18.py  day20.py  day21.py  day22.py  day23.py  day24.py
src/aoc/year2023/: day02.py  day03.py  day04.py  day05.py  day06.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day16.py  day17.py  day18.py  day20.py  day21.py  day22.py  day23.py  day24.py
