[project]
name = "advent-of-code"
version = "808.303"
description = "Advent of Code"
authors = [{ name = "Huib Piguillet", email = "huib@proton.me" }]
requires-python = ">=3.14"
dependencies = [
  "based-utils",
  "cairocffi",
  "igraph",
  "matplotlib",
  "more-itertools",
  "parse",
  "simpleeval",
]

[dependency-groups]
dev = [
  "matplotlib-stubs",
  "mypy",
  "powerchord",
  "pre-commit",
  "pytest",
  "ruff",
]

[tool.uv.sources]
based-utils = { path = "../based-utils", editable = true }
powerchord = { path = "../powerchord", editable = true }

[project.scripts]
aoc_solve = "advent_of_code.cli:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.powerchord]
tasks = ["mypy", "pytest", "ruff check", "ruff format"]

[tool.mypy]
files = ["src"] #, "tests"]
implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-ra --doctest-modules"  # -q
#asyncio_mode = "auto"
#asyncio_default_fixture_loop_scope = "function"
testpaths = [
  "src/advent_of_code",
  #    "tests",
]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Default value: ["E4", "E7", "E9", "F"]
select = ["ALL"]
ignore = [
  # pydocstyle (D)
  "D100", # https://docs.astral.sh/ruff/rules/undocumented-public-module/	Missing docstring in public module
  "D101", # https://docs.astral.sh/ruff/rules/undocumented-public-class/	Missing docstring in public class
  "D102", # https://docs.astral.sh/ruff/rules/undocumented-public-method/	Missing docstring in public method
  "D103", # https://docs.astral.sh/ruff/rules/undocumented-public-function/	Missing docstring in public function
  "D104", # https://docs.astral.sh/ruff/rules/undocumented-public-package/	Missing docstring in public package
  "D105", # https://docs.astral.sh/ruff/rules/undocumented-magic-method/	Missing docstring in magic method
  "D106", # https://docs.astral.sh/ruff/rules/undocumented-public-nested-class/	Missing docstring in public nested class
  "D107", # https://docs.astral.sh/ruff/rules/undocumented-public-init/	Missing docstring in __init__
  # warning: The following rule may cause conflicts when used with the formatter: `D203`. To avoid unexpected behavior, we recommend disabling this rule
  "D203", # https://docs.astral.sh/ruff/rules/incorrect-blank-line-before-class/	1 blank line required before class docstring
  "D211", # https://docs.astral.sh/ruff/rules/blank-line-before-class/	No blank lines allowed before class docstring
  "D212", # https://docs.astral.sh/ruff/rules/multi-line-summary-first-line/	Multi-line docstring summary should start at the first line

  # pycodestyle (E, W)
  "E501", # https://docs.astral.sh/ruff/rules/line-too-long/	Line too long ({width} > {limit})

  # eradicate (ERA)
  "ERA001", # https://docs.astral.sh/ruff/rules/commented-out-code/	Found commented-out code

  # flake8-commas (COM)
  # warning: The following rule may cause conflicts when used with the formatter: `COM812`
  "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/	Trailing comma missing

  # flake8-bandit (S)
  "S101", # https://docs.astral.sh/ruff/rules/assert/ Use of `assert` detected

  # flake8-todos (TD)
  "TD002", # https://docs.astral.sh/ruff/rules/missing-todo-author/	Missing author in TODO; try: # TODO(<author_name>): ... or # TODO @<author_name>: ...
  "TD003", # https://docs.astral.sh/ruff/rules/missing-todo-link/	Missing issue link for this TODO

  # flake8-fixme (FIX)
  "FIX001", # https://docs.astral.sh/ruff/rules/line-contains-fixme/	Line contains FIXME, consider resolving the issue
  "FIX002", # https://docs.astral.sh/ruff/rules/line-contains-todo/	Line contains TODO, consider resolving the issue
  "FIX003", # https://docs.astral.sh/ruff/rules/line-contains-xxx/	Line contains XXX, consider resolving the issue
  "FIX004", # https://docs.astral.sh/ruff/rules/line-contains-hack/	Line contains HACK, consider resolving the issue

  # flake8-pyi (PYI)
  "PYI025", # https://docs.astral.sh/ruff/rules/unaliased-collections-abc-set-import/	Use from collections.abc import Set as AbstractSet to avoid confusion with the set builtin

  # Pylint (PL)
  # Refactor (PLR)
  "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/	Magic value used in comparison, consider replacing {value} with a constant variable

  # Ruff-specific rules (RUF)
  "RUF013", # https://docs.astral.sh/ruff/rules/implicit-optional/	PEP 484 prohibits implicit Optional
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
  "C901", #too complex
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
